# Python-Template

./: .editorconfig  .gitignore  .gitlint  .gitmessage  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/core/: calculator.py
src/utils/: validators.py
tests/integration/: test_workflow.py
tests/unit/: test_calculator.py  test_validators.py
